<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise">

    <TextView
        android:id="@+id/btn_Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:fontFamily="@font/rubik_light"
        android:text="@string/registration"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/sp25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/name"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Registration" />

    <EditText
        android:id="@+id/et_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/phone_number"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Name" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/email"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_PhoneNumber" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/password"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Email" />

    <EditText
        android:id="@+id/et_RepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_edtext"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/repeat_password"
        android:paddingLeft="@dimen/dp16"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Password" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:background="@drawable/bg_button_cart"
        android:fontFamily="@font/rubik_light"
        android:letterSpacing="0.02"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_RepeatPassword" />

    <TextView
        android:id="@+id/btn_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:fontFamily="@font/rubik_light"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Register" />

</androidx.constraintlayout.widget.ConstraintLayout>